fix code block overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -217,6 +217,7 @@ img.img-center {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
+  overflow: scroll;
 }
 
 .post ul, .post ol {
